[package]
name = "ensmallen_graph"
version = "0.1.0"
authors = [
    "LucaCappelletti94 <cappelletti.luca94@gmail.com>",
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"    
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ensmallen_graph"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[dependencies]
env_logger
graph = { path = "graph" }

[profile.release]
opt-level = 3