[package]
edition = "2018"
name = "ensmallen_graph"
version = "0.1.1"
license = "MIT"
repository= "https://github.com/LucaCappelletti94/ensmallen_graph"
authors = [
    "Luca Cappelletti <cappelletti.luca94@gmail.com>",
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"    
]
readme = "README.md"
exclude = ["pytests/*", "Python-*"]
keywords = ["python", "rust", "graph", "random", "walk"]

[package.metadata.maturin]
requires-python = ">=3.5"
requires-dist = ["toml~=0.10.0"]

[lib]
name = "ensmallen_graph"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[dependencies]
env_logger = "0.7.1"
graph = { path = "graph" }

[profile.release]
opt-level = 3