[workspace]

members = [
    "graph",
    "graph/csr",
    "graph/ensmallen_traits",
    "graph/mmap",
    "graph/cpu_models",
    "graph/tags",
    "graph/express_measures",
    "bindings/python",
    "code_analysis",
    "code_analysis/rust_parser",
]

[profile.release]
opt-level=3
lto="fat"
overflow-checks=false
debug=false
debug-assertions=false


