[package]
name = "code-analysis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_parser = {path = "./rust_parser" }
graph = {path = "../graph" }
regex = "1.5.4"


[lib]
name = "libcodeanalysis"
path = "src/lib.rs"

[[bin]]
name = "check"
path = "src/bin_check.rs"

[[bin]]
name = "bindgen"
path = "src/bin_bindgen.rs"

[[bin]]
name = "metatest"
path = "src/bin_metatest.rs"