[package]
name = "code-analysis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_parser = {path = "./rust_parser" }
regex = "1.5.4"
lazy_static = "1.4.0"
walkdir = "2"
rayon = "1.1"
indicatif = {version="0.16.0", features = ["rayon"]}
counter = "0.5.2"

[lib]
name = "libcodeanalysis"
path = "src/lib.rs"

[[bin]]
name = "check"
path = "src/bin_check.rs"

[[bin]]
name = "bindgen"
path = "src/bin_bindgen.rs"

[[bin]]
name = "metatest"
path = "src/bin_metatest.rs"