[package]
name = "graph"
version = "0.6.0"
authors = [
    "LucaCappelletti94 <cappelletti.luca94@gmail.com>",
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"   
] 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "graph"

[build-dependencies]
cc = "1.0.46"

[dev-dependencies]
linecount= "0.1.0"
criterion = "0.3"

[dependencies]
crossbeam = "0.8.0"
log = "0.4.8"
env_logger = "0.7.1"
rayon = "1.1"
rand = {version="0.7", features = ["small_rng"] }
itertools = "0.10.0"
permutation = "0.2.5"
counter = "0.5.2"
derive-getters = "0.1.0"
bitvec = "0.21"
glob = "0.3.0"
num_cpus = "1.13.0"
linked_hash_set = "0.1.4"
indicatif = {version="0.15.0", features = ["rayon"]}
arbitrary = { version = "0.4.5", features = ["derive"] }
roaring = { git = "https://github.com/zommiommy/roaring-rs", branch = "master" }
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
elias_fano_rust = { git = "https://github.com/zommiommy/elias_fano_rust", branch = "master"}
tags = {path="./tags/"}

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = true     # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = true  # Enables debug assertions.

[profile.test]
overflow-checks = true     # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = true  # Enables debug assertions.
opt-level = 3