[package]
name = "graph"
version = "0.6.0"
authors = [
    "LucaCappelletti94 <cappelletti.luca94@gmail.com>",
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"   
] 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "graph"

[build-dependencies]
cc = "1.0.46"

[dev-dependencies]
linecount= "0.1.0"
criterion = "0.3"

[dependencies]
libc = "0.2.109"
crossbeam = "0.8.0"
log = "0.4.8"
regex = "1.5.4"
lazy_static="1.4.0"
env_logger = "0.7.1"
rayon = "1.6"
serde = "1.0.130"
rand = {version="0.7", features = ["small_rng"] }
itertools = "0.10.0"
permutation = "0.2.5"
tokenizers = "0.11.0"
counter = "=0.5.2"
is_sorted = "0.1.1"
derive-getters = "0.1.0"
bitvec = {version="1.0.1", features=["atomic"]}
glob = "0.3.0"
keyed_priority_queue = "0.3.2"
validator = "0.14.0"
num_cpus = "1.13.0"
iter-set = "2.0.1"
memchr = "2.4.1"
atomic_float = "0.1.0"
num-traits = "0.2.14"
heterogeneous_graphlets = {git = "https://github.com/LucaCappelletti94/heterogeneous_graphlets"}
v_htmlescape = "0.13.1"
linked_hash_set = "0.1.4"
hashbrown = {version="0.12.1", features=["rayon"]}
indicatif = {version="0.16.0", features = ["rayon"]}
arbitrary = { version = "0.4.5", features = ["derive"] }
mmap = {path = "./mmap"}
csr = {path = "./csr"}
express_measures = {path = "./express_measures"}
roaring = { git = "https://github.com/zommiommy/roaring-rs", branch = "master" }
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
visited-rs = { git = "https://github.com/LucaCappelletti94/visited-rs", branch = "main" }
hyperloglog-rs = {version="0.1.44", features=["std"]}
elias_fano_rust = "0.1.1"
tags = {path="./tags/"}
atoi_radix10 = { git = "https://github.com/gilescope/atoi_radix10"}
parallel_frontier = {git="https://github.com/zommiommy/parallel_frontier"}
xxhash-rust = {version ="0.8.6", features=["xxh3"]}
siphasher = "0.3"
ahash = "0.8.2"

[target.'cfg(unix)'.dependencies]
nix = "0.22.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.32.0", features = ["alloc",  "Win32_System_Memory", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"]}

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = false  # Enables debug assertions.

[profile.test]
overflow-checks = true   # Disable integer overflow checks.
debug = true            # Include debug info.
debug-assertions = true  # Enables debug assertions.
opt-level = 3
