[package]
edition = "2018"
name = "ensmallen"
version = "0.7.0"
license = "MIT"
repository= "https://github.com/LucaCappelletti94/ensmallen"
authors = [
    "Luca Cappelletti <cappelletti.luca94@gmail.com>",
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"    
]
readme = "README.md"
exclude = ["pytests/*", "Python-*", "./*.py"]
keywords = ["python", "rust", "graph", "random", "walk"]

[features]
default = []
cuda = ["dep:gpu_models"]

[lib]
name = "ensmallen"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module", "abi3-py36"]

[dependencies]
env_logger = "0.8.1"
graph = { path = "../../graph" }
cpu_models = { path = "../../graph/cpu_models" }
gpu_models = { path = "../../graph/gpu_models" , optional = true }
tags = { path = "../../graph/tags" }
numpy = "0.13.1"
rand = {version="0.7", features = ["small_rng"] }
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
strsim = "0.10.0"
markdown = "0.3"
rayon = "1.5.0"
ctrlc = "3.1.7"
roaring = { git = "https://github.com/zommiommy/roaring-rs", branch = "master" }
half = "1.8.2"

[profile.release]
debug = false             # Include debug info.
overflow-checks = true # Provides panic messages in case of overflows
opt-level = 3
lto = "fat"
# codgen-units=1
#inline-threshold=1000000
