[package]
edition = "2018"
name = "ensmallen"
version = "0.7.0"
license = "MIT"
authors = [
    "Luca Cappelletti <cappelletti.luca94@gmail.com>",
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"    
]

[lib]
name = "ensmallen"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16"
features = ["extension-module", "abi3", "abi3-py37", "macros", "multiple-pymethods"]

[dependencies]
env_logger = "0.8.1"
libc = "*"
regex = "1"
graph = { path = "../../graph" }
cpu_models = { path = "../../graph/cpu_models" }
mmap = { path = "../../graph/mmap" }
express_measures = { path = "../../graph/express_measures" }
tags = { path = "../../graph/tags" }
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
roaring = { git = "https://github.com/zommiommy/roaring-rs", branch = "master" }
numpy = {git = "https://github.com/LucaCappelletti94/rust-numpy.git", features = ["half"] }
half = {git = "https://github.com/LucaCappelletti94/half-rs.git", features = ["use-intrinsics", "num-traits"]}
rand = {version="0.7", features = ["small_rng"] }
strsim = "0.10.0"
file_progress = {git="https://github.com/LucaCappelletti94/rust_file_progress.git"}
num-traits = {git="https://github.com/zommiommy/num-traits.git", features=["atomic_from_mut"]}
hyperloglog-rs = {git = "https://github.com/LucaCappelletti94/hyperloglog-rs"}
markdown = "0.3"
rayon = "1.6.0"
indicatif = {version="0.17.0", features = ["rayon"]}
ctrlc = "3.1.7"
serde = "1.0"
serde_json = "1.0"

