[package]
edition = "2018"
name = "ensmallen"
version = "0.7.0"
license = "MIT"
authors = [
    "Luca Cappelletti <cappelletti.luca94@gmail.com>",
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"    
]

[lib]
name = "ensmallen"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.16"
features = ["extension-module", "abi3", "abi3-py37", "macros", "multiple-pymethods"]

[dependencies]
env_logger = "0.8.1"
libc = "*"
regex = "1"
graph = { path = "../../graph" }
cpu_models = { path = "../../graph/cpu_models" }
mmap = { path = "../../graph/mmap" }
express_measures = { path = "../../graph/express_measures" }
tags = { path = "../../graph/tags" }
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
roaring = { git = "https://github.com/zommiommy/roaring-rs", branch = "master" }
numpy = {git = "https://github.com/LucaCappelletti94/rust-numpy.git", features = ["half"] }
half = {git = "https://github.com/LucaCappelletti94/half-rs.git", features = ["use-intrinsics", "num-traits"]}
rand = {version="0.7", features = ["small_rng"] }
strsim = "0.10.0"
file_progress = {git="https://github.com/LucaCappelletti94/rust_file_progress.git"}
num-traits = {git="https://github.com/zommiommy/num-traits.git", features=["atomic_from_mut"]}
hyperloglog-rs = {version="0.1.48", features=["std"]}
markdown = "0.3"
rayon = "1.6.0"
indicatif = {version="0.17.0", features = ["rayon"]}
ctrlc = "3.1.7"
serde = "1.0"
serde_json = "1.0"

[profile.release]
debug = false             # Include debug info.
overflow-checks = false # Provides panic messages in case of overflows
# The opt-level setting controls the number of optimizations Rust will apply to 
# your code, with a range of 0 to 3. Applying more optimizations extends 
# compiling time, so if you’re in development and compiling your code often, 
# you’ll want faster compiling even if the resulting code runs slower. That is 
# the reason the default opt-level for dev is 0. When you’re ready to release 
# your code, it’s best to spend more time compiling. You’ll only compile in 
# release mode once, but you’ll run the compiled program many times, so release 
# mode trades longer compile time for code that runs faster. That is why the 
# default opt-level for the release profile is 3.
opt-level = 3

# This flag controls whether LLVM uses link time optimizations to produce better 
# optimized code, using whole-program analysis, at the cost of longer linking 
# time.
# Perform "fat" LTO which attempts to perform optimizations across all crates 
# within the dependency graph
lto = "fat"

# When a crate is split into multiple codegen units, LLVM is able to process 
# them in parallel. Increasing parallelism may speed up compile times, but may 
# also produce slower code. Setting this to 1 may improve the performance of 
# generated code, but may be slower to compile.
# The default value, if not specified, is 16 for non-incremental builds. For 
# incremental builds the default is 256 which allows caching to be more 
# granular.
# codgen-units=1

# This option lets you set the default threshold for inlining a function. 
# It takes an unsigned integer as a value. Inlining is based on a cost model, 
# where a higher threshold will allow more inlining.
# The default for opt-level=3 is 275.
#inline-threshold=1000000


