[project]
name="ensmallen"
version="0.8.81"
repository= "https://github.com/AnacletoLAB/ensmallen"
readme = "../../../README.rst"
description = "ðŸ‡ Ensmallen is the Rust/Python high-performance graph processing submodule of the GRAPE library."
exclude = ["pytests/*", "Python-*", "./*.py"]
keywords = ["python", "rust", "graph", "random", "walk"]

requires-python = ">=3.7"
dependencies = [
    "toml~=0.10.0",
    "downloaders>=1.0.15",
    "compress_json>=1.0.7",
    "userinput>=1.0.19",
    "cache_decorator>=2.1.11",
    "bioregistry>=0.5.65",
    "tqdm",
    "pandas",
    "py-cpuinfo",
    "environments_utils>=1.0.4"
]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
