[package]
name = "preprocessing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path="../shared"}
tags = {path="../tags"}
indicatif = {version="0.16.0", features = ["rayon"]}
rayon = "1.1"
counter = "0.5.2"