[package]
name = "graph_harness"
version = "0.1.0"
authors = ["Tomaso Fontana <tommaso.fontana.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
arbitrary = { version = "0.4.5", features = ["derive"] }
libc = "0.2"
signal-hook = "0.3.8"
lazy_static = "1.4.0"
backtrace = "0.3"
rayon = "1.1"

[dependencies.graph]
path = "../../graph"

[profile.release]
panic = "unwind"