[package]
name = "stupid_fuzzer"
version = "0.1.0"
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph_harness = {path = "../graph_harness"}
arbitrary = { version = "0.4.5", features = ["derive"] }