[package]
name = "cpu_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
graph = {path = "../"}
express_measures = {path = "../express_measures"}
indicatif = {version="0.16.0", features = ["rayon"]}
rayon = "1.1"
num = "0.4.0"
atomic_float = "0.1.0"
funty = "2.0.0"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
ensmallen_traits = {path="../ensmallen_traits"}
serde = "1.0"
serde_json = "1.0"
num-traits = {git="https://github.com/zommiommy/num-traits.git"}
half = {git="https://github.com/LucaCappelletti94/half-rs.git", features=["use-intrinsics", "num-traits"]}