[package]
name = "cpu_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
graph = {path = "../"}
express_measures = {path = "../express_measures"}
indicatif = {version="0.17.0", features = ["rayon"]}
rayon = "1.1"
atomic_float = "0.1.0"
strum_macros = "0.24"
itertools = "0.10.5"
strum = { version = "0.24", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
hyperloglog-rs = {version="0.1.44", features=["std"]}
heterogeneous_graphlets = {git = "https://github.com/LucaCappelletti94/heterogeneous_graphlets"}
num-traits = {git="https://github.com/zommiommy/num-traits.git", features=["atomic_from_mut"]}
parallel_frontier = {git="https://github.com/zommiommy/parallel_frontier"}
file_progress = {git="https://github.com/LucaCappelletti94/rust_file_progress.git"}
half = {git="https://github.com/LucaCappelletti94/half-rs.git", features=["use-intrinsics", "num-traits"]}