[package]
name = "express_measures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
unzip-n = "0.1"
num-traits = {git="https://github.com/zommiommy/num-traits.git"}
half = {git="https://github.com/LucaCappelletti94/half-rs.git", features=["use-intrinsics", "num-traits"]}