[package]
name = "express_measures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
unzip-n = "0.1"
indicatif = {version="0.17.0", features = ["rayon"]}
num-traits = {git="https://github.com/zommiommy/num-traits.git"}
half = {version = "2.4", features = ["use-intrinsics", "num-traits"]}
parallel_frontier = {git="https://github.com/zommiommy/parallel_frontier"}