[package]
name = "mmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.32.0", features = ["alloc",  "Win32_System_Memory", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security"]}