[package]
name = "from_vec"
version = "0.1.0"
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "=0.5.52"

[dependencies.graph_harness]
path = "../../graph_harness"

[profile.release]
opt-level = 3
codgen-units=1
lto = "fat"
overflow-checks = false     # Disable integer overflow checks.
debug = false             # Include debug info.
debug-assertions = false  # Enables debug assertions.
